style.less
html {
	background-color: white;
}

body {
	overflow-y: scroll;
	width: 100%;
	height: 100%;
}

.wikibase-queryservice {
	background-color: white;
}
.error {
	margin: 20px;
	overflow-x: scroll;
	font-family: monospace;
	white-space: pre;
}

#query-result,
#hide-explorer {
	display: none;
}

#query-error,
#query-error-short {
	display: none;
}

.graph-iframe {
	width: 100%;
	height: 90vh;
	border: none;
	margin: 0;
}

.error-line {
	border-bottom: 2px dotted red;
}

.error-character {
	background: lightsalmon;
}

.result {
	display: none;
}

#query-result pre {
	display: inline;
	font-family: serif;
	border: none;
	background-color: inherit;
	width: 900px;
	margin: 10px 30px;
	tab-size: 21;
	font-size: 12px;
	overflow: auto;
}

#query-result {
	width: 100%;
}

#result-browser-menu .glyphicon,
#result-browser-menu .fa {
	padding: 0 0.5em 0 0;
}

.table-cell-selected {
	background-color: #eff;
}

.fixed-table-pagination {
	margin-bottom: 2.5em;
}

.cm-s-default .cm-bracket {
	color: #000;
}

.CodeMirror {
	border: 1px solid #ccc;
	height: 100%;
}

.CodeMirror-scroll {
	min-height: 320px;
}

.CodeMirror-hints {
	direction: ltr;
}

.CodeMirror-hint {
	max-width: 19em;
}

.queryEditor {
	border: 0;
	font-family: monospace;
	min-height: 273px;
	padding: 0;
	width: 100%;
}

pre.CodeMirror-placeholder {
	color: #777;
}

.exampleQueries {
	width: 160px;
}

.exampleIcons {
	width: 0;
}

iframe.shortUrl {
	border: none;
	width: 250px;
	height: 40px;
}

.query-main {
	max-width: 100%;
	display: flex;
	flex-direction: row;
}

.query-main > .toolbar {
	flex: 0 0 auto;
	flex-basis: 55px;
	display: flex;
	flex-direction: column;
}

.query-helper-and-editor {
	flex: 1 1 auto;
	display: flex;
	flex-direction: row;
}

#query-box {
	position: relative;
}

#query-box .status {
	padding: 3px;
	font-size: 13px;
	min-height: 25px;
	color: #777;
	margin-bottom: 5px;
}
.dataUpdated > span:nth-child( 1 ) {
	padding: 5px;
}

#query-box .nav {
	margin-left: 0;
}

#query-box .toolbar {
	border-right: 1px solid #bce8f1;
}

#query-box .toolbar .fa {
	font-size: 1.5em;
}

#query-box .toolbar-top {
	padding-top: 0.5em;
	flex-grow: 1;
	text-align: left;
	opacity: 0.5;
	visibility: hidden;
}
#query-box .toolbar-top:hover {
	opacity: 1;
}

#query-box .toolbar-bottom {
	padding-top: 1em;
	padding-bottom: 0.2em;
	flex-grow: 0;
	text-align: center;
}

.query-editor-container {
	flex: 1 1 auto;
	width: 100%;
}

.splitter {
	flex: 0 0 auto;
	width: 1em;
	background-image: url( data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAgAAAAhCAQAAABOpSL+AAAAIklEQVR4AWMwbb/PdR+JZDD9f1/oPhI5sgVGBSruc9xHIgGdSQqqQJGkRgAAAABJRU5ErkJggg== ); /* node_modules/jquery-resizable-dom/assets/vsizegrip.png */
	background-position: center center;
	background-repeat: no-repeat;
	background-color: #eaf3ff; /* Accent90 */
	cursor: col-resize;
}

#query-box .toolbar-bottom .fa {
	font-size: 2em;
}

.jq-toast-single a {
	border: none;
}

/**
	Bootstrap Styles
**/
.navbar,
.alert {
	margin-bottom: 0;
}

.navbar .help {
	padding-left: 0;
}
.navbar-right {
	margin-right: 0;
}

.navbar .dropdown-menu {
	z-index: 1001; /* above the Leaflet control containers */
}

.popover {
	max-width: 80vw;
	width: auto;
}

.dropdown-toggle .glyphicon:before,
.dropdown-toggle .fa:before {
	margin-right: 3px;
}

.navbar-brand {
	line-height: 35px;
	padding: 5px 15px;
}
.navbar-brand img {
	padding-right: 5px;
}
.navbar-toggle {
	z-index: 100;
}

.navbar-btn {
	margin-left: 15px;
}

.nav > li {
	float: left;
}

/**
	To allow dropdown to function normally in small screens
	and allow buttons display the same way as in full size
**/
@media ( max-width: 768px ) {
	.navbar-left {
		float: left !important;
		margin: 0;
	}
	.navbar-right {
		float: right !important;
	}
	.navbar-nav .open .dropdown-menu {
		position: absolute;
		-webkit-box-shadow: 0 1px 2px rgba( 0, 0, 0, 0.175 );
		box-shadow: 0 1px 2px rgba( 0, 0, 0, 0.175 );
		border: 1px solid rgba( 0, 0, 0, 0.15 );
		background-color: #fff;
		width: auto;
	}
	.navbar-collapse.in {
		overflow-y: visible;
	}
	.panel-body .table td {
		display: inline-block;
	}
}

/*
	editor hint style
*/
.wikibase-rdf-hint {
	border-bottom: 1px solid gray;
	white-space: normal;
}

/**
	Keyboard Shortcut Help dialog
**/
.keyboard-shortcut-help td,
.keyboard-shortcut-help th {
	padding: 8px;
	vertical-align: middle;
}

/**
	Query example dialog
**/

.QueryExamples .tagCloud {
	width: 100%;
	height: 200px;
}

.QueryExamples .tag {
	background-color: #337ab7;
	background-image: none;
}

.QueryExamples input.tags-input {
	visibility: hidden;
}

.QueryExamples .tagFilter {
	padding-bottom: 5px !important;
}

.QueryExamples .exampleTable {
	max-height: 500px;
	overflow-y: auto;
	overflow-x: hidden;
	border: 1px solid #ccc;
}

.explorer-panel {
	position: fixed;
	right: 0;
	bottom: 0;
	background-color: rgba( 255, 255, 255, 0.8 );
	z-index: 100;
	display: none;
	overflow: auto;
}

.explorer-panel iframe {
	height: 70vh;
	width: 50vw;
}

/**
	Code example dialog
**/

.CodeExamples .tab-content .url {
	word-wrap: break-word;
	margin: 2em;
}

/* colors */

div.jqcloud {
	color: #337ab7;
}
div.jqcloud a {
	color: inherit;
}
div.jqcloud a:hover {
	color: #337ab7;
}
div.jqcloud span.w10 {
	color: rgba( 51, 122, 183, 1 );
}
div.jqcloud span.w9 {
	color: rgba( 51, 122, 183, 0.9 );
}
div.jqcloud span.w8 {
	color: rgba( 51, 122, 183, 0.8 );
}
div.jqcloud span.w7 {
	color: rgba( 51, 122, 183, 0.75 );
}
div.jqcloud span.w6 {
	color: rgba( 51, 122, 183, 0.6 );
}
div.jqcloud span.w5 {
	color: rgba( 51, 122, 183, 0.65 );
}
div.jqcloud span.w4 {
	color: rgba( 51, 122, 183, 0.5 );
}
div.jqcloud span.w3 {
	color: rgba( 51, 122, 183, 0.55 );
}
div.jqcloud span.w2 {
	color: rgba( 51, 122, 183, 0.4 );
}
div.jqcloud span.w1 {
	color: rgba( 51, 122, 183, 0.45 );
}

/* image grid */
.img-grid {
	width: 95%;
	margin: 3em auto;
	margin: 1.5em auto;
	padding: 0;
	font-size: 0.85em;
}
.item.hidden {
	visibility: hidden;
}
.item-row {
	width: 100%;
}
.hidden-row {
	height: 50px;
	visibility: hidden;
}
.item {
	background: #fff;
	padding: 1em;
	margin: 0 0.75em 1.5em;
	box-sizing: border-box;
	-moz-box-sizing: border-box;
	-webkit-box-sizing: border-box;
	box-shadow: 2px 2px 4px 0 #ccc;
	display: inline-block;
}
.hidden-row > .item{
	display: none;
}
.item-img {
	width: 100%;
}
.summary > div {
	height: 1.5em;
}
.summary > div > span {
	white-space: nowrap;
	text-overflow: ellipsis;
	display: block;
	overflow: hidden;
}
.summary .glyphicon {
	display: inline;
}

/* loading spinner */
#loading-spinner {
	display: none;
	color: #777;
}
#loading-spinner > .fa-spinner {
	margin: 0 auto 20px;
	display: block;
}

/* ActionBar */
.action-bar .progress {
	height: 30px;
	font-size: 30px;
}
.action-bar .progress-bar {
	font-size: 16px;
	line-height: 30px;
	font-weight: bold;
}

.action-bar .label {
	display: block;
	font-size: 16px;
	line-height: 20px;
}

.action-bar {
	display: none;
}

/*
	Treemap
*/
#query-result .labelbody {
	background: transparent;
	overflow: hidden;
	cursor: pointer;
}

/*
	Query Helper
*/

#query-box .query-helper {
	flex: 0 0 auto;
	min-width: 300px;
	width: 30vw;
	max-width: 80vw;
	z-index: 100;

	.panel {
		border: none;
		margin: 0 1em 0 1em;
		&-info {
			background: rgba( 255, 255, 255, 0.9 );
		}
		&-heading {
			background: rgba( 255, 255, 255, 0.9 );
			padding: 8px 10px;
		}
		&-body {
			font-size: 120%;
			padding: 10px;
		}
		.close {
			float: inline-end;
		}
	}

	.toolbar {
		padding-left: 0.5em;
		text-align: right;
		opacity: 0.3;
		.fa {
			font-size: 1.2em;
			display: inline-block;
			padding: 0.1em;
		}
	}

	tr:hover > .toolbar {
		opacity: 1;
	}

	.popover {
		min-width: 250px;
		white-space: nowrap;
	}

	&-hidden {
		display: none;
	}
	&-hidden + .splitter {
		display: none;
	}

}

.select2-container {
	min-width: 150px;
}

.popover .select2-container {
	min-width: 200px;
}

/*
	ULS
*/

.nav .uls-trigger {
	display: none;
	padding-left: 30px;
}

/*
	VIS
*/
.vis-item {
	padding: 15px;
	box-shadow: 5px 5px 20px rgba( 0, 0, 0, 0.2 );
}

.vis-item.vis-selected {
	background-color: white;
	border-color: #888a85;
}

.vis-item,
.vis-item.vis-line {
	background-color: white;
	border-color: #888a85;
}

/* T163984 */
.vis-item.vis-range:hover {
	/*
	 * let hovered timeline ranges expand to fit their content
	 * (needs !important because width is set directly on the element)
	 */
	width: unset !important;
	/* also draw them over other, non-hovered ranges */
	z-index: 100;
}

/*
	MultiDimensionResultBrowser
*/

#query-result .foreground path {
	fill: none;
	stroke: #222;
	stroke-opacity: 0.4;
	pointer-events: none;
	stroke-width: 3px;
}

#query-result .axis .title {
	font-size: 8px;
	font-weight: bold;
	text-transform: uppercase;
	transform: rotate( -12deg ) translate( -5px, -6px );
}

#query-result .axis line,
#query-result .axis path {
	fill: none;
	stroke: #000;
	stroke-width: 1px;
}

#query-result .brush .extent {
	fill-opacity: 0.3;
	stroke: #fff;
	stroke-width: 1px;
}

@media ( max-width: 900px ) {
	.CodeMirror-scroll {
		min-height: 150px;
	}

	#query-box .query-helper {
		width: 100%;
		min-width: 0;
		max-width: none;
	}
	#query-box .query-helper .panel {
		margin: 0;
	}

	.query-helper-and-editor {
		flex-direction: column;
	}
	.query-helper-and-editor > .splitter {
		display: none;
	}
}

